<resources>
    <string name="app_name">The (H)ill Reloaded</string>
    <string name="title">The (H)ill <br>Reloaded</br></string>
    <string name="powered_by">Powered by One Click to Create a Bug</string>
    <string name="modalità_accesso">MODALITÀ ACCESSO</string>
    <string name="account">ACCOUNT</string>
    <string name="account_già_creato">HO GIÀ UN ACCOUNT</string>
    <string name="crea_account">CREA UN ACCOUNT</string>
    <string name="ospite">OSPITE</string>
    <string name="menu">MENU</string>
    <string name="login">LOGIN</string>
    <string name="registrati">REGISTRATI</string>
    <string name="giocatore_singolo">GIOCATORE SINGOLO</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="sunnyPoints">I SUNNYPOINTS SONO UTILI PER COMPRARE NUOVE UNITÀ DI RICICLO E PER USARE L\'INCENERITORE. SI OTTENGONO PRODUCENDO MATERIALI NELLE UNITÀ DI RICICLO.</string>
    <string name="unitPoints">GLI UNITPOINTS SI OTTENGONO RICICLANDO I RIFIUTI. SONO UTILI PER ESSERE SCAMBIATI IN SUNNYPOINTS, MA ANCHE PER FARE L\'UPGRADE DELLE UNITÀ DI RICICLO.</string>
    <string name="sunnyPointsPowerUp">QUESTO POWER-UP CONSENTE DI OTTENERE DUE SUNNYPOINTS ISTANTANEAMENTE.</string>
    <string name="rallentaSpawn">QUESTO POWER-UP CONSENTE DI RALLENTARE LA VELOCITÀ DI SPAWN DEI RIFIUTI PER UN PERIODO DI TEMPO.</string>
    <string name="rimuoviRifiuti">QUESTO POWER-UP CONSENTE DI RIMUOVERE DUE RIFIUTI ISTANTANEAMENTE DALLA ZONA DI SPAWN.</string>
    <string name="accceleraRiciclo">QUESTO POWER-UP CONSENTE DI ACCELERARE IL PROCESSO DI RICICLO DEI RIFIUTI PER UN PERIODO DI TEMPO.</string>
    <string name="difficoltà">DIFFICOLTÀ</string>
    <string name="facile">FACILE</string>
    <string name="media">MEDIA</string>
    <string name="difficile">DIFFICILE</string>
    <string name="multigiocatore">MULTIGIOCATORE</string>
    <string name="modalità_classica">MODALITÀ CLASSICA</string>
    <string name="modalità_powerup">MODALITÀ POWER-UP</string>
    <string name="scegli_partita">SCEGLI PARTITA</string>
    <string name="partita_salvata">PARTITA SALVATA</string>
    <string name="nuova_partita">NUOVA PARTITA</string>
    <string name="uno_contro_uno">1 VS 1 CLASSICO</string>
    <string name="uno_contro_uno_powerUp">1 VS 1 POWER UP</string>
    <string name="seleziona_giocatore">SELEZIONA UN GIOCATORE</string>
    <string name="stato">STATO</string>
    <string name="utenti_disponibili">UTENTI DISPONIBILI</string>
    <string name="accedi_per_giocare">ACCEDI PER GIOCARE ONLINE</string>
    <string name="accedi_per_vedere">ACCEDI PER VEDERE I PUNTEGGI</string>
    <string name="cerca">CERCA</string>
    <string name="gioca">GIOCA</string>
    <string name="creaStanza">CREA STANZA</string>
    <string name="cercando_giocatori">CERCANDO GIOCATORI...</string>
    <string name="nessun_giocatore">NESSUN GIOCATORE DISPONIBILE</string>
    <string name="cerca_giocatori">CERCA GIOCATORI</string>
    <string name="attesa_avversario">IN ATTESA DELL\'AVVERSARIO</string>
    <string name="avversario_pronto">L\'AVVERSARIO È PRONTO</string>
    <string name="risultati">RISULTATI</string>
    <string name="vittoria">HAI VINTO!</string>
    <string name="sconfitta">HAI PERSO!</string>
    <string name="pareggio">PAREGGIO!</string>
    <string name="mostra_risultati">MOSTRA RISULTATI</string>
    <string name="aggiorna">AGGIORNA</string>
    <string name="tuo_punteggio">TUO PUNTEGGIO:</string>
    <string name="punteggio_avversario">PUNTEGGIO AVVERSARIO:</string>
    <string name="tuo_abbandono">HAI ABBANDONATO LA PARTITA</string>
    <string name="abbandono_avversario">L\'AVVERSARIO HA ABBANDONATO LA PARTITA</string>
    <string name="cooperativo">COOPERATIVO</string>
    <string name="caricamento">CARICAMENTO</string>
    <string name="percentuale">0%</string>
    <string name="impostazioni">IMPOSTAZIONI</string>
    <string name="punteggi">PUNTEGGI PARTITE</string>
    <string name="lingua">LINGUA</string>
    <string name="inglese">INGLESE</string>
    <string name="italiano">ITALIANO</string>
    <string name="volume">VOLUME</string>
    <string name="musica">MUSICA</string>
    <string name="effetti">EFFETTI</string>
    <string name="exit_icon">exit_icon</string>
    <string name="option_icon">option_icon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="registrazione_effettuata">Registrazione effettuata</string>
    <string name="accesso_effettuato">Accesso effettuato</string>
    <string name="logout">logout</string>
    <string name="errore">Errore:</string>
    <string name="back">indietro</string>
    <string name="avviso_no_account">Accedendo come ospite non sarà possibile salvare i dati</string>
    <string name="info_caricamento1">Caricando i rifiuti...</string>
    <string name="info_caricamento2">Caricando le unità di riciclo...</string>
    <string name="info_caricamento3">Preparando l\'inceneritore...</string>
</resources>