<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".menu.MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:src="@drawable/logo"
        android:textColor="@color/black"
        android:background="@drawable/logo_background"
        android:textSize="19sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:text="@string/scegli_partita"
        android:lineSpacingExtra="-20dp"
        android:textColor="@color/dark_cornflower_blue"
        android:textSize="40sp"
        android:shadowColor="@color/black"
        android:shadowDx="15"
        android:shadowDy="10"
        android:shadowRadius="1.5"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20sp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="102dp"
        android:clickable="true"
        android:focusable="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/partitaSalvata"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="70dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/choice_button_background">

                <ImageView
                    android:contentDescription="@string/modalità_classica"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:src="@drawable/closed_trash"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/bowlby_one_sc"
                    android:gravity="center"
                    android:text="@string/partita_salvata"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="102dp"
        android:clickable="true"
        android:focusable="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/nuovaPartita"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:cardCornerRadius="70dp"
            app:cardElevation="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/choice_button_background">

                <ImageView
                    android:contentDescription="@string/modalità_powerup"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/open_trash"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:fontFamily="@font/bowlby_one_sc"
                    android:text="@string/nuova_partita"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/indietro"
            android:contentDescription="@string/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/back"
            android:onClick="onClick"
            android:background="@drawable/nav_button_background"/>

    </LinearLayout>



</LinearLayout>