<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".menu.ConnessioneActivity">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/logo_background"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:src="@drawable/logo"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="330dp"
        android:layout_height="73dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:lineSpacingExtra="-20dp"
        android:shadowColor="@color/black"
        android:shadowDx="15"
        android:shadowDy="10"
        android:shadowRadius="1.5"
        android:text="@string/utenti_disponibili"
        android:textColor="@color/dark_cornflower_blue"
        android:textSize="33sp"
        app:layout_constraintBottom_toTopOf="@+id/listaDispositivi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/stato"
        android:textColor="@color/lincoln_green"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/listaDispositivi"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0" />

    <ListView
        android:id="@+id/listaDispositivi"
        android:layout_width="350dp"
        android:layout_height="187dp"
        android:background="@drawable/listview_layout"
        android:elevation="15dp"
        android:scrollbarThumbVertical="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/cerca"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/login_button_background"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/cerca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaDispositivi" />

    <Button
        android:id="@+id/creaStanza"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_background"
        android:enabled="true"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/creaStanza"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cerca" />

    <ImageView
        android:id="@+id/indietro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/nav_button_background"
        android:clickable="true"
        android:contentDescription="@string/back"
        android:focusable="true"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="@+id/listaDispositivi"
        app:layout_constraintTop_toBottomOf="@+id/creaStanza" />

</androidx.constraintlayout.widget.ConstraintLayout>