<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".menu.MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:src="@drawable/logo"
        android:textColor="@color/black"
        android:background="@drawable/logo_background"
        android:textSize="19sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:text="@string/tutorial"
        android:lineSpacingExtra="-20dp"
        android:textColor="@color/dark_cornflower_blue"
        android:textSize="40sp"
        android:shadowColor="@color/black"
        android:shadowDx="15"
        android:shadowDy="10"
        android:shadowRadius="1.5"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:layout_marginStart="20dp"
        android:text="@string/modalità_classica"
        android:lineSpacingExtra="-20dp"
        android:textColor="@color/dark_cornflower_blue"
        android:textSize="20sp"
        android:shadowColor="@color/black"
        android:shadowDx="10"
        android:shadowDy="10"
        android:shadowRadius="1.5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/sun"
                android:onClick="onClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sunnyPoints"
                android:textSize="12dp"
                android:fontFamily="@font/bowlby_one_sc"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/unitpoints"
                android:onClick="onClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/unitPoints"
                android:textSize="12dp"
                android:fontFamily="@font/bowlby_one_sc"
                android:textColor="@color/black"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bowlby_one_sc"
            android:layout_marginStart="20dp"
            android:text="@string/modalità_powerup"
            android:lineSpacingExtra="-20dp"
            android:textColor="@color/dark_cornflower_blue"
            android:textSize="20sp"
            android:shadowColor="@color/black"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="1.5"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/sun"
                android:onClick="onClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/sunnyPointsPowerUp"
                android:textSize="12dp"
                android:fontFamily="@font/bowlby_one_sc"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/unitpoints"
                android:onClick="onClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/unitPoints"
                android:textSize="12dp"
                android:fontFamily="@font/bowlby_one_sc"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

        <ImageView
            android:id="@+id/indietro"
            android:contentDescription="@string/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/back"
            android:onClick="onClick"
            android:background="@drawable/nav_button_background"/>

</LinearLayout>