<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".menu.MenuActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:fontFamily="@font/bevan"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:src="@drawable/logo"
        android:textColor="@color/black"
        android:background="@drawable/logo_background"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/punteggiPartite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="center"
        android:text="@string/punteggi"
        android:lineSpacingExtra="-20dp"
        android:textColor="@color/dark_cornflower_blue"
        android:textSize="40sp"
        android:shadowColor="@color/black"
        android:shadowDx="15"
        android:shadowDy="10"
        android:shadowRadius="1.5"/>

    <TextView
        android:id="@+id/avvisoAccesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bowlby_one_sc"
        android:layout_gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="1.5"
        android:text="@string/accedi_per_vedere"
        android:textAlignment="center"
        android:textColor="@color/dark_cornflower_blue"
        android:textSize="15sp"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/listaPunteggi"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/listview_layout"
        android:scrollbarThumbVertical="@android:color/transparent"
        android:elevation="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/indietro"
        android:contentDescription="@string/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/back"
        android:onClick="onClick"
        android:background="@drawable/nav_button_background"/>

    <ImageView
        android:id="@+id/condividi"
        android:contentDescription="@string/back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        android:src="@drawable/back"
        android:onClick="onClick"
        android:background="@drawable/nav_button_background"/>

</LinearLayout>